--- a/index.html
+++ b/index.html
@@ -26,9 +26,21 @@
         <img src="images/banner.png" alt="">
        </div>
     </header>
-             <main>
-
-             </main>
+    <main>
+        <section class="feature-container">
+          <div class="feature-container-img">
+            <img src="images/team1.png" alt="">
+            <img src="images/team2.png" alt="">
+            <img src="images/team3.png" alt="">
+            <img src="images/team4.png" alt="">
+          </div>
+          <div class="feature-content">
+             <h2 class="feature-content-tittle">Quick list of Our Features</h2>
+             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+             <button class="btn-primary">Explore More</button>
+          </div>
+        </section>
+     </main>
              <footer>
 
              </footer>
