--- a/index.html
+++ b/index.html
@@ -40,6 +40,35 @@
              <button class="btn-primary">Explore More</button>
           </div>
         </section>
+        <div class="fact">
+            <div class="fact-text">
+                <h3>Some Facts</h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            
+        </div>
+        <div class="fact-img-container">
+            <div class="fact-img">
+                <img src="images/icons/ribon.png" alt="">
+                <h1>54</h1>
+                <p>Awards Winnings</p>
+            </div>
+            <div class="fact-img">
+                <img src="images/icons/projects.png" alt="">
+                <h1>54</h1>
+                <p>Awards Winnings</p>
+            </div>
+            <div class="fact-img">
+                <img src="images/icons/email.png" alt="">
+                <h1>54</h1>
+                <p>Awards Winnings</p>
+            </div>
+            <div class="fact-img">
+                <img src="images/icons/customers.png" alt="">
+                <h1>54</h1>
+                <p>Awards Winnings</p>
+            </div>
+        </div>
+        </div>
      </main>
              <footer>
 
