--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
      </main>
              <footer>
-
+                  <div class="footer-section"><p>All rights reserved copyright@2023 startup landing page design</p></div>
              </footer>
 </body>
 </html>
